hphp/test/slow/dict/init-parse-error4.php.expectf
Fatal error: Value of collection element cannot be marked as reference in %s/test/slow/dict/init-parse-error4.php on line 4